<package>
  <name>cob_3d_features</name>
  <version>1.0.0</version>
  
  <description>
     Feature algorithms.
  </description>
  
  <license>LGPL</license>
  
  <maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
  <author>Georg Arbeiter</author>
  
  <url>http://wiki.ros.org/cob_3d_features</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>cob_3d_mapping_common</build_depend>
  <build_depend>opencv2</build_depend>
  <!--build_depend>pcl</build_depend-->
  <build_depend>pcl_ros</build_depend>
  <build_depend>libvtk</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>cob_3d_mapping_common</run_depend>
  <run_depend>opencv2</run_depend>
  <!--run_depend>pcl</run_depend-->
  <run_depend>pcl_ros</run_depend>
  <run_depend>libvtk</run_depend>

</package>



