<package>
  <name>cob_3d_features</name>
  <version>1.0.0</version>
  
  <description>
     Feature algorithms.
  </description>
  
  <license>LGPL</license>
  
  <maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
  <author>Georg Arbeiter</author>
  
  <url>http://wiki.ros.org/cob_3d_features</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>cob_3d_mapping_common</build_depend>
  <build_depend>cob_3d_mapping_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libvtk</build_depend>
  <build_depend>cob_3d_visualization</build_depend>
  <build_depend>libpolypartition</build_depend>
  <build_depend>libfftw3</build_depend>

  <run_depend>libopencv-dev</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>cob_3d_mapping_common</run_depend>
  <run_depend>cob_3d_mapping_msgs</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libvtk</run_depend>
  <run_depend>cob_3d_visualization</run_depend>
  <run_depend>libpolypartition</run_depend>
  <run_depend>libfftw3</run_depend>
  
</package>



