<?xml version="1.0"?>
<package format="2">
	<name>cob_3d_features</name>
	<version>1.0.0</version>

	<description>
		Feature algorithms.
	</description>

	<license>LGPL</license>

	<maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
	<author>Georg Arbeiter</author>

	<url>http://wiki.ros.org/cob_3d_features</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>boost</depend>
	<depend>cob_3d_mapping_common</depend>
	<depend>cob_3d_mapping_msgs</depend>
	<depend>cob_3d_visualization</depend>
	<depend>libfftw3</depend>
	<depend>libopencv-dev</depend>
	<depend>libpcl-all-dev</depend>
	<depend>libpolypartition</depend>
	<depend>libvtk</depend>
	<depend>pcl_ros</depend>
</package>
