<package>
  <name>cob_3d_fov_segmentation</name>
  <version>1.0.0</version>
  
  <description>
     Segments a point cloud by the field of view (FOV) of a camera.
  </description>
  
  <license>LGPL</license>
  
  <maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
  <author>Georg Arbeiter</author>
  
  <url>http://wiki.ros.org/cob_3d_fov_segmentation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cob_3d_mapping_common</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>cob_3d_mapping_common</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tf_conversions</run_depend>
</package>


