<?xml version="1.0"?>
<package format="2">
	<name>cob_3d_fov_segmentation</name>
	<version>1.0.0</version>

	<description>
		Segments a point cloud by the field of view (FOV) of a camera.
	</description>

	<license>LGPL</license>

	<maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
	<author>Georg Arbeiter</author>

	<url>http://wiki.ros.org/cob_3d_fov_segmentation</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>cob_3d_mapping_common</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>tf_conversions</depend>
</package>


