<package>
  <name>cob_3d_mapping_common</name>
  <version>1.0.0</version>

  <description>
     Common classes and nodes for 3D environment perception.
  </description>

  <license>LGPL</license>

  <maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
  <author>Georg Arbeiter</author>

  <url>http://wiki.ros.org/cob_3d_mapping_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cob_3d_mapping_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>libgpc</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>polypartition</build_depend>

  <!--run_depend>boost</run_depend-->
  <run_depend>cob_3d_mapping_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>libgpc</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>polypartition</run_depend>
</package>


