<?xml version="1.0"?>
<package format="2">
	<name>cob_3d_mapping_common</name>
	<version>1.0.0</version>

	<description>
		Common classes and nodes for 3D environment perception.
	</description>

	<license>LGPL</license>

	<maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
	<author>Georg Arbeiter</author>

	<url>http://wiki.ros.org/cob_3d_mapping_common</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>cob_3d_mapping_msgs</depend>
	<depend>eigen_conversions</depend>
	<depend>libgpc</depend>
	<depend>libpolypartition</depend>
	<depend>pcl_conversions</depend>
	<depend>roscpp</depend>
</package>
