<?xml version="1.0"?>
<package format="2">
	<name>cob_3d_mapping_demonstrator</name>
	<version>1.0.0</version>
	
	<description>
		Operates the 3D mapping demonstrator.
	</description>
	
	<license>LGPL</license>
	
	<maintainer email="goa@ipa.fhg.de">Georg Arbeiter</maintainer>
	<author>Georg Arbeiter</author>
	
	<url>http://wiki.ros.org/cob_3d_mapping_demonstrator</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>actionlib</depend>
	<depend>brics_actuator</depend>
	<depend>cmake_modules</depend>
	<depend>cob_3d_mapping_msgs</depend>
	<!--depend>cob_dashboard</depend-->
	<depend>cob_script_server</depend>
	<depend>cob_srvs</depend>
	<depend>diagnostic_msgs</depend>
	<depend>libqt4</depend>
	<!--depend>pr2_controllers_msgs</depend-->
	<depend>roscpp</depend>
	<depend>rviz</depend>
	<depend>std_srvs</depend>
	<depend>urdf</depend>

	<exec_depend>cob_3d_mapping_pipeline</exec_depend>
	<exec_depend>nodelet</exec_depend>
	<exec_depend>openni2_launch</exec_depend>
	<exec_depend>python-pygraphviz</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>

	<export>
		<nodelet plugin="${prefix}/plugin_description.xml" />
	</export>
</package>